# minimal-carnix-fail

./: README
carnix-fails/: Cargo.toml
carnix-succeeds/: Cargo.toml
